--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,74 @@
-/* Apply these styles to the menu items in the dropdown */
+
 .navbar-nav > li {
-    width: 100%; /* Make the items take up the entire width */
-    text-align: center; /* Center the text horizontally */
+    width: 100%;
+    text-align: center; 
 }
 
-/* Optionally, you can style the anchor (link) elements within the menu items */
+
 .navbar-nav > li > a {
-    display: block; /* Make the anchor a block-level element */
-    padding: 10px; /* Add some padding for better spacing */
+    display: block; 
+    padding: 10px; 
 }
 
 body {
-  font-size: 24px;
-  color: #000;
-  background-color: #fff;
-  font-family: "Oxygen", sans-serif;
+    font-size: 24px;
+    color: pink;
+    background-color: #fff;
+    font-family: "Oxygen", sans-serif;
 }
 
-
 .navbar-brand {
-  font-weight: bold;
-  font-size: 30px;
-  margin-top: 5px;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 5px;
 }
 
 div > p {
-	text-align: justify;
+    text-align: justify;
 }
 
 h3, h2 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .content-cell {
-	background-color: #999999;
-	margin-bottom: 15px;
-	padding: 10px 15px;
+    background-color: #999999;
+    margin-bottom: 15px;
+    padding: 10px 15px;
 }
 
 #header-nav {
-  border: 2px solid #000;
-  background-color: #999999;
+    border: 2px solid #000;
+    background-color: #999999;
 }
 
 .content-cell h2 {
-	margin-top: -5px;
+    margin-top: -5px;
 }
 
 #back {
-  font-size: 18px;
+    font-size: 18px;
 }
+
 /* Not XS screen */
-@media (min-width:768px){
-	#collapsable-nav {
-		visibility: hidden;
-	}
+@media (min-width: 768px) {
+    #collapsable-nav {
+        visibility: hidden;
+    }
 }
 
 /* XS screen */
-@media (max-width:767px){
-	.navbar-brand {
-		margin-left: 15px;
-	}
-	
-	.content-cell {
-		margin-left: 15px;
-		margin-right: 15px;
-	}
-	
-	#collapsable-nav {
-		background-color: #fff;
-	}
-	
-	#nav-list {		
-		margin-bottom: 1px;
-		margin-top: 0px;
-	}
-	
-	#nav-list li{
-		text-align: center;
-		border: 2px solid #000;
-		margin-bottom:-1px;
-	}
-	#nav-list li:hover{
-		font-weight: bold;
-	}
+@media (max-width: 767px) {
+    /* Mobile menu styles (as provided above) */
+    .navbar-nav > li {
+        width: 100%;
+        text-align: center;
+    }
 
+    .navbar-nav > li > a {
+        display: block;
+        padding: 10px;
+    }
+
+    /* Additional mobile-specific styles can be added here */
 }
