--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 
 body {
     font-size: 24px;
-    color: pink;
+    color:#000;
     background-color: #fff;
     font-family: "Oxygen", sans-serif;
 }
